src/objects/Prospect_Account_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>ABM_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABM Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Category_Auto__c</fullName>
        <label>Account Category (Auto)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Prosp_Snap_Account_Name__r.Acct18__c</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_ID__c</fullName>
        <label>Acct ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ghost_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ghost Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Account_Health__c</fullName>
        <label>Account Health</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect Account Snapshots</relationshipLabel>
        <relationshipName>Prospect_Account_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Cons_Fcst_N4Q__c</fullName>
        <label>Cons Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Contacts__c</fullName>
        <label># Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Customer_Status__c</fullName>
        <label>Account Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_District__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Edu_Fcst_N4Q__c</fullName>
        <label>Edu Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Fcst_N4Q__c</fullName>
        <label>Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Lic_Fcst_N4Q__c</fullName>
        <label>Lic Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Manager_Lvl_1__c</fullName>
        <label>Manager (Lvl 1)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_OA__c</fullName>
        <label>%OA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Open_Sls_Opps__c</fullName>
        <label># Open Sls Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Pipe_N4Q__c</fullName>
        <label>Pipe (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Ren_Fcst_N4Q__c</fullName>
        <label>Ren Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Students__c</fullName>
        <label># Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Subs_Fcst_N4Q__c</fullName>
        <label>Subs Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Supp_Fcst_N4Q__c</fullName>
        <label>Supp Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosp_Snap_Total_Fcst_N4Q__c</fullName>
        <label>Total Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Snap_ES_Actual_hours__c</fullName>
        <description>Customer Snap ES Actual(hours)</description>
        <label>Prospect Snap ES Actual (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Snap_ES_Budget__c</fullName>
        <description>Prospect Snap ES Budget</description>
        <label>Prospect Snap ES Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Snap_ES_Plan__c</fullName>
        <description>Prospect Snap ES Plan</description>
        <label>Prospect Snap ES Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>IF( 
MONTH(DATEVALUE(CreatedDate))&lt;10, 
&quot;0&quot;+(TEXT(MONTH(DATEVALUE(CreatedDate)))), 
(TEXT(MONTH(DATEVALUE(CreatedDate))))) 
+ &quot;/&quot; + 
IF( 
DAY(DATEVALUE(CreatedDate))&lt;10, 
&quot;0&quot;+(TEXT(DAY(DATEVALUE(CreatedDate)))), 
(TEXT(DAY(DATEVALUE(CreatedDate)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Date</label>
        <type>Text</type>
    </fields>
    <label>Prospect Account Snapshot</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Prospect Account Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Account Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>